# rg

./: .editorconfig  Cargo.toml  readme.md
src/: GreedyRoomGen.rs  actions.rs  adjacency.rs  ailogic.rs  ailoop.rs  components.rs  flood.rs  genroom_forest.rs  genroom_greedy.rs  greedgrow.rs  main.rs  math.rs  moveloop.rs  obj.rs  position.rs  render.rs  room.rs  roomgen.rs  roomgen_greedy.rs  spells.rs  super_sparse_storage.rs  termjuggler.rs  tick.rs  util.rs  x1b.rs
src/genroom/: bezier.rs  floodjoin.rs  forest.rs  greedy.rs  mod.rs  river.rs
