[package]
name = "rg"
version = "0.1.0"
authors = ["serprex"]

[dependencies]
rand = "0.3"
fnv = "1.0.5"
termios = "0.2"
#specs = "0.7"
specs = { path = "./specs", version = "0.7", default-features = false }
smallvec = "0.2"
x1b = "0.5.1"
#x1b = { path = "../x1b", version = "*" }

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
